frysk-imports/lib/dw: 2007-01-22  Mike Cvet  <mcvet@redhat.com>
	* Dwfl.java (getLineAddresses): Changed return type to LinkedList.

frysk-core/frysk/rt:
	* TestStepping.java (setUpTest): Removed debug statements.
	* RunState.java (setUpStep): Removed redundant try statement.
	(stepIn): Ditto.
	(getDwfl): Added Javadoc.
	(LineBreakpoint): Changed Vector members to LinkedList, via #3904.
	(LineBreakpoint.addBreakpoint): Some changes addressing above.
	(LineBreakpoint.deleteBreakpoint): Ditto.